Display tasks to the page from local storage

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <h3>Task</h3>
         </div>
         <div>
-          <ul>
+          <ul id="tasks">
             <li>
               Pick up food
               <span
